--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,16 @@
     <color name="pinkBtnBackground">#FF0051</color>
     <color name="grey_button_background">#E1DCDC</color>
     <color name="super_light_grey">#F6F6F6</color>
+
+    <color name="tw__blue_default">#FF5BAAF4</color>
+    <color name="tw__blue_pressed">#FF4186C8</color>
+    <color name="tw__light_gray">#ccd6dd</color>
+    <color name="tw__solid_white">#FFFFFFFF</color>
+    <dimen name="tw__login_btn_drawable_padding">4dp</dimen>
+    <dimen name="tw__login_btn_height">32dp</dimen>
+    <dimen name="tw__login_btn_left_padding">8dp</dimen>
+    <dimen name="tw__login_btn_radius">5dp</dimen>
+    <dimen name="tw__login_btn_right_padding">12dp</dimen>
+    <dimen name="tw__login_btn_text_size">14sp</dimen>
+    <string name="tw__login_btn_txt">Log in with Twitter</string>
 </resources>
