Update home and splash

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportHeight="108"
+    android:tint="?attr/colorControlNormal">
+  <group android:scaleX="2.25"
+      android:scaleY="2.25">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="@android:color/white"
+        android:pathData="M24,41.95 L21.95,40.1Q16.65,35.25 13.2,31.725Q9.75,28.2 7.7,25.425Q5.65,22.65 4.825,20.4Q4,
+        18.15 4,15.85Q4,11.35 7.025,8.325Q10.05,5.3 14.5,5.3Q17.35,5.3 19.775,6.65Q22.2,8 24,10.55Q26.1,7.85 28.45,6.575Q30.8,5.3 33.5,5.3Q37.95,5.3 40.975,8.325Q44,11.35 44,15.85Q44,18.15 43.175,20.4Q42.35,22.65 40.3,25.425Q38.25,28.2 34.8,31.725Q31.35,35.25 26.05,40.1ZM24,38Q29.05,33.35 32.325,30.025Q35.6,
+        26.7 37.525,24.2Q39.45,21.7 40.225,19.75Q41,17.8 41,15.85Q41,12.55 38.9,10.425Q36.8,8.3 33.5,8.3Q30.95,8.3 28.75,9.875Q26.55,11.45 25.2,14.3H22.75Q21.45,11.5 19.25,9.9Q17.05,8.3 14.5,8.3Q11.2,8.3 9.1,10.425Q7,12.55 7,15.85Q7,17.8 7.775,19.775Q8.55,21.75 10.475,24.275Q12.4,26.8 15.7,30.1Q19,33.4 24,38ZM24,23.15Q24,23.15 24,
+        23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Q24,23.15 24,23.15Z"/>
+  </group>
 </vector>
