Update home and splash

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,17 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/transparent_bottom_nav_bar"
-            android:elevation="6.00dp"
-            app:itemIconTint="@drawable/white_nav_icon_tint"
-            app:itemTextColor="@drawable/white_nav_icon_tint"
-            app:menu="@menu/bottom_nav_menu"
-            android:layout_gravity="bottom"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@drawable/transparent_bottom_nav_bar"
+        android:elevation="6.00dp"
+        app:itemIconTint="@drawable/white_nav_icon_tint"
+        app:itemTextColor="@drawable/white_nav_icon_tint"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
