Update giao dien login

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="_4sdp">4dp</dimen>
+    <dimen name="_0sdp">0dp</dimen>
     <dimen name="_24sdp">24dp</dimen>
     <dimen name="_6sdp">6dp</dimen>
     <dimen name="_30sdp">30dp</dimen>
@@ -10,6 +11,7 @@
     <dimen name="_14sdp">14dp</dimen>
     <dimen name="_12sdp">12dp</dimen>
     <dimen name="_16sdp">16dp</dimen>
+    <dimen name="_16ssp">16sp</dimen>
     <dimen name="_20sdp">20dp</dimen>
     <dimen name="_280sdp">280dp</dimen>
     <dimen name="_24ssp">24sp</dimen>
@@ -23,5 +25,15 @@
     <dimen name="_8sdp">8dp</dimen>
     <dimen name="_13ssp">13sp</dimen>
     <dimen name="_52sdp">52dp</dimen>
-
+    <dimen name="_26sdp">26dp</dimen>
+    <dimen name="_16.5sdp">16.5dp</dimen>
+    <dimen name="_16.9sdp">16.9dp</dimen>
+    <dimen name="_7.8sdp">7.8dp</dimen>
+    <dimen name="_15.6sdp">15.6dp</dimen>
+    <dimen name="_50sdp">50dp</dimen>
+    <dimen name="_18ssp">18sp</dimen>
+    <dimen name="_31.2sdp">31.2dp</dimen>
+    <dimen name="_10.4sdp">10.4dp</dimen>
+    <dimen name="_5.2sdp">5.2dp</dimen>
+    <dimen name="_1.3sdp">1.3dp</dimen>
 </resources>
