--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
 
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
 
     <!--    <color name="light_white">#EFEDED</color>-->
     <!--    <color name="light_black">#474646</color>-->
@@ -50,4 +45,179 @@
     <dimen name="tw__login_btn_right_padding">12dp</dimen>
     <dimen name="tw__login_btn_text_size">14sp</dimen>
     <string name="tw__login_btn_txt">Log in with Twitter</string>
+    <color name="bs_background_dark">#ff303030</color>
+    <color name="gray">#767676</color>
+    <color name="btnCloseDialog">#017ac9</color>
+    <color name="merchant_type_color">#3366CC</color>
+    <color name="text_color">#000000</color>
+    <color name="color_white">#ffffff</color>
+    <color name="InviteColorTitle">#008600</color>
+    <color name="warning_input_text">#FF5435</color>
+    <color name="background_loading">#30000000</color>
+    <color name="title">#0c4e89</color>
+    <color name="pass_strong_yeu">#F05A28</color>
+    <color name="pass_strong_trungbinh">#ff8300</color>
+    <color name="pass_strong_trungbinh2">#FAAF40</color>
+    <color name="pass_strong_manh">#25A9E0</color>
+    <color name="pass_strong_ratmanh">#009345</color>
+    <color name="blue_primary">#017ac9</color>
+    <color name="orange_primary">#ef7726</color>
+    <color name="orange_VV">#ff7904</color>
+    <color name="slogan">#515151</color>
+    <color name="header">#0C4E89</color>
+    <color name="black_second">#444444</color>
+    <color name="resend_otp">#007fd0</color>
+    <!-- Blue primary (hover, active, focus): 175386 -->
+    <color name="blue_primary_second">#175386</color>
+    <color name="btn_cancel_normal">#5396DA</color>
+    <color name="btn_cancel_press">#4B8AC9</color>
+    <color name="contact_avatar_background">#808080</color>
+
+    <color name="header_blue">#2C9CE4</color>
+    <color name="date_blue">#0C4E89</color>
+    <color name="red_noty">#ff0000</color>
+
+    <color name="bottomAreaClick">#a21318</color>
+    <color name="bottomAreaUnClick">#bd1a20</color>
+    <color name="bg_button_round">#a22C9CE4</color>
+
+    <!--capture lib-->
+    <color name="contents_text">#ff000000</color>
+    <color name="encode_view">#ffffffff</color>
+    <color name="border_color">#000000</color>
+    <color name="possible_result_points">#c0ffbd21</color> <!-- Android standard ICS color -->
+    <color name="result_minor_text">#ffc0c0c0</color>
+    <color name="result_points">#c099cc00</color> <!-- Android standard ICS color -->
+    <color name="result_text">#ffffffff</color>
+    <color name="result_view">#b0000000</color>
+    <color name="status_text">#ffffffff</color>
+    <color name="viewfinder_laser">#ffcc0000</color> <!-- Android standard ICS color -->
+    <color name="viewfinder_mask">#60000000</color>
+
+    <color name="actionbar_background">#27a5df</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#0084ff</color>
+    <color name="blue_vice">#09577E</color>
+    <color name="colorLink">#0092ff</color>
+    <color name="black_opacity_10">#1A000000</color>
+    <color name="black_opacity_30">#4D000000</color>
+    <color name="black_opacity_50">#7D000000</color>
+    <color name="black_opacity_70">#aD000000</color>
+    <color name="black_opacity_85">#D9000000</color>
+    <color name="grey">#808080</color>
+    <color name="grey_two">#f1f1f1</color>
+    <color name="grey_three">#777777</color>
+    <color name="grey_three_trans">#33b9b8b8</color>
+    <color name="grey_four">#f4f5f6</color>
+    <color name="grey_five">#ededed</color>
+    <color name="grey_six">#f7f7f7</color>
+    <color name="grey_seven">#c9c9c9</color>
+    <color name="grey_eight">#b9b9b9</color>
+    <color name="black">#000000</color>
+    <color name="black_effective">#333333</color>
+    <color name="black_two">#2d2d2d</color>
+    <color name="blue_trans">#5f9cef</color>
+    <color name="blue_trans1">#AA5AB5DF</color>
+    <color name="blue_trans2">#335AB5DF</color>
+    <color name="blue_trans3">#235AB5DF</color>
+    <color name="blue">#0573e0</color>
+    <color name="blue_two">#0083c2</color>
+    <color name="blue_there">#dceff8</color>
+    <color name="blue_four">#e1f1ff</color>
+    <color name="white">#ffffff</color>
+    <color name="white_trans">#aaffffff</color>
+    <color name="white_trans_2">#bfffffff</color>
+    <color name="seafoam_blue">#2b66df</color>
+    <color name="green">#00a651</color>
+    <color name="green_two">#ccffca</color>
+    <color name="green_three">#DCEFF8</color>
+    <color name="green_four">#39b44a</color>
+    <color name="green_five">#009933</color>
+    <color name="green_six">#1fb754</color>
+    <color name="red_button">#c42126</color>
+    <color name="link_water">#D9EDF6</color>
+    <color name="manibu">#5AB5DF</color>
+    <color name="orange_two">#ecd6ab</color>
+    <color name="orange_three">#ff7f00</color>
+    <color name="orange_four">#FFA500</color>
+    <color name="grey_slogan_home">#6d6d6d</color>
+    <color name="grey_text_des">#777777</color>
+
+    <!-- Button Image Custom -->
+    <color name="default_bg">#0077ff</color>
+    <color name="default_bg_pressed">#9c000000</color>
+    <color name="default_bg_disabled">#ff999999</color>
+    <color name="default_text_color">#ffffff</color>
+    <color name="red">#DF0101</color>
+    <color name="red1">#DB2E33</color>
+    <color name="red2">#B8383A</color>
+    <color name="red3">#E66B6D</color>
+    <color name="pink">#F6D6D6</color>
+
+    <color name="transparent">#00ffffff</color>
+    <color name="orange">#ECD7AC</color>
+    <color name="yellow">#FBD036</color>
+    <color name="yellow2">#fff7e6</color>
+    <color name="ice_berg">#DAEEF7</color>
+    <color name="grey_bright">#757575</color>
+    <color name="blue_add_bg">#e4f3fa</color>
+    <color name="grey_dove">#707070</color>
+    <color name="alto">#D9D9D9</color>
+    <color name="white_grey">#E9E9E9</color>
+    <color name="white_1">#e8e8e8</color>
+    <color name="white_2">#EDEDED</color>
+    <color name="grey_1">#bdbdbd</color>
+    <color name="progress_gray">#88aaaaaa</color>
+    <color name="white_grey_two">#EDEDED</color>
+    <color name="default_text_color_gray">#6c6c6c</color>
+    <color name="blue_dark">#06618d</color>
+    <color name="blue_dark3">#10299b</color>
+    <color name="blue_dark_2">#57c3f7</color>
+    <color name="blue_dark4">#0092ff</color>
+    <color name="blue_dark5">#027BD6</color>
+    <color name="dark_grey">#565555</color>
+    <color name="dove_grey">#747474</color>
+    <color name="french_grey">#BDBDBD</color>
+    <color name="hint_text">#777777</color>
+    <color name="orange1">#f96806</color>
+    <color name="orange2">#f78f08</color>
+    <color name="orange3">#f57e20</color>
+    <color name="orange4">#f07525</color>
+    <color name="grey_light">#ececeb</color>
+    <color name="grey_dark">#4e4a4b</color>
+    <color name="main_toolbar_icon_color">#333333</color>
+
+    <color name="red_color">#ff0000</color>
+    <color name="header_color">#f8f8f8</color>
+    <color name="footer_color">#f9f9f9</color>
+    <color name="footer_line_color">#eaeaea</color>
+    <color name="line_color">#e8e8e8</color>
+    <color name="bg_text_note">#fff3e1</color>
+    <color name="bg_color">#e8e8e8</color>
+    <color name="text_color_42">#424242</color>
+    <color name="text_color_5b">#5b5b5b</color>
+    <color name="text_color_77">#777777</color>
+    <color name="text_color_81">#81dcfc</color>
+    <color name="text_color_99">#999999</color>
+    <color name="line_color_1">#cccbcb</color>
+    <color name="line_color_2">#f5f6f7</color>
+    <color name="edt_line_color">#0092ff</color>
+    <color name="edt_line_selected_color">#027BD6</color>
+    <!--interest_rate-->
+    <color name="text_blue">#006bb7</color>
+    <color name="text_gray">#bfbfbf</color>
+    <color name="bg_gray">#eeeeee</color>
+    <color name="gray_7C">#77797C</color>
+
+    <color name="mask_qr">#55000000</color>
+    <color name="gray2">#cccccc</color>
+
+    <color name="guide_indicator_select_color">#00269A</color>
+    <color name="guide_indicator_normal_color">#bcbec0</color>
+    <color name="open_payment_acc">#2E3192</color>
+    <color name="lucky_draw_24">#242372</color>
+    <color name="lucky_draw_70">#702327</color>
+    <color name="lucky_draw_ff">#ffbe1d</color>
+    <color name="lucky_draw_fff">#fff8f0</color>
 </resources>
