--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,34 @@
         <item name="cornerSizeTopRight">@dimen/_6sdp</item>
     </style>
 
+    <style name="TextViewStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textColorHint">@color/text_color_77</item>
+        <item name="android:textColor">@color/text_color_42</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+    </style>
+
+    <style name="OtpEditText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/_15sdp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/_15sdp</item>
+        <item name="android:longClickable">false</item>
+        <item name="android:gravity">center</item>
+        <item name="android:maxLength">1</item>
+        <item name="android:inputType">number</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:background">@drawable/bg_otp_normal</item>
+    </style>
+
+    <style name="OtpEditTextLongClick" parent="OtpEditText">
+        <item name="android:longClickable">true</item>
+        <item name="android:inputType">number</item>
+        <item name="android:maxLength">6</item>
+    </style>
+
 </resources>
